# popcorn

./: Cargo.toml  Makefile  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
kernel/: Cargo.toml
kernel/src/: kernel.rs  lib.rs  main.rs  system.rs
kernel/src/kernel/: kernel_main.rs
kernel/src/system/: interrupts.rs  panic.rs  syscall.rs  vga_buffer.rs
kernel/src/utils/: cformat.rs
src/: lib.rs  main.rs  system.rs  utils.rs
src/kernel/: kernel_main.rs
src/system/: allocation.rs  interrupt_handlers.rs  interrupts.rs  syscall.rs  syscall_handler.c  vga_buffer.rs
tests/: heap_allocation.rs  syscall_test.rs
