

[package]
name = "popcorn-bootloader"
version = "0.1.0"
authors = ["The Popcorn Team"]
edition = "2021"

#[[test]]
#name = "should_panic"
#harness = false


#[[test]]
#name = "stack_overflow"
#harness = false


[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = "0.11.4"
popcorn-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
members = ["kernel"]