[package]
name = "popcorn-kernel"
version = "0.1.0"
authors = ["The Popcorn Team"]
edition = "2021"

[dependencies]
bootloader_api = "0.11.0"
x86_64 = { version = "0.14.7", default-features = false, features = ["instructions", "inline_asm"] }
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
vga = "0.2.9"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

